<resources>
    <string name="app_name">Exercise_1B</string>
    <string name="bill_amount">Bill amount</string>
    <string name="amount_to_tip">Amount to tip</string>
    <string name="total_amount">Total amount</string>
    <string name="number_of_people">Number of People:</string>
    <string name="total_people">Total People</string>
    <string name="total_amount_per_person">Total amount per person</string>
    <string name="calculate">Calculate</string>
    <string-array name="tip_percentage">
        <item>10%</item>
        <item>15%</item>
        <item>20%</item>
    </string-array>
</resources>