<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/bill_amount"
                android:layout_marginBottom="16dp"
                android:id="@+id/billAmount"
                tools:ignore="LabelFor"
                style="@style/CustomEditText"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Select tip percentage:"
            android:textStyle="normal"
            android:layout_marginBottom="10dp"
            style="@style/CustomTextView"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:entries="@array/tip_percentage"
                style="@style/CustomSpinner"
                android:background="@drawable/spinner_item_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/amount_to_tip"
                android:textStyle="normal"
                style="@style/CustomTextView"/>

            <TextView
                android:id="@+id/tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                style="@style/CustomTextView"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            >

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/total_amount"
                android:textSize="24sp"
                android:textStyle="bold"
                style="@style/CustomTextView"/>

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                style="@style/CustomTextView"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            >

            <TextView
                android:id="@+id/numberOfPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/number_of_people"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                style="@style/CustomTextView"/>

            <EditText
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/total_people"
                android:layout_marginBottom="16dp"
                android:id="@+id/totalPeople"
                tools:ignore="LabelFor"
                style="@style/CustomEditText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/amountPerPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/total_amount_per_person"
                android:textSize="24sp"
                android:textStyle="bold"
                style="@style/CustomTextView"/>

            <TextView
                android:id="@+id/totalAmountPerPerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_gravity="center"
                style="@style/CustomTextView"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                style="@style/CustomButton"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
